--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
-*{
-  margin:0px;
-  padding:0px;
+* {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background: url('/tictatoe-1.jpg') no-repeat center center fixed;
+  background-size: cover;
+  min-height: 100vh;
+  padding: 10px;
 }
