--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
+  flex-direction: column;
   justify-content: center;
   padding: 20px;
   border: 5px solid orange;
@@ -53,6 +54,11 @@
   border-radius: 12px;
   cursor: pointer;
 }
+#but{
+  display: flex;
+  flex-direction: row;
+  column-gap: 10px;
+}
 
 /* === Color Pickers === */
 #coll,
@@ -74,13 +80,28 @@
 }
 
 /* === Buttons for Colors === */
-#red, #green, #blue, #yellow, #purple {
+#red,#green, #blue, #yellow, #purple {
   height: 40px;
   width: 40px;
   border: none;
   cursor: pointer;
 }
+#red{
+  background-color: red;
+}
+#green{
+  background-color: green;
 
+}
+#blue{
+  background-color: blue;
+}
+#yellow{
+  background-color: yellow;
+}
+#purple{
+  background-color: purple;
+}
 /* === Subheadings === */
 #subheading {
   font-size: 22px;
@@ -118,22 +139,21 @@
 }
 
 /* === Media Query for Mobile === */
-@media screen and (max-width: 600px) {
-  #heading {
-    font-size: 10vw;
+@media (max-width: 600px) {
+  .parent {
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
   }
 
-  #content {
-    width: 90vw;
-  }
-
-  #down {
-    width: 80%;
-  }
-
-  #fonts button,
-  #fonts select {
+  #fonts, #text-color, #bg-color {
     width: 100%;
-    text-align: center;
+    box-sizing: border-box;
+  }
+
+  #text {
+    width: 100%;
+    max-width: 350px;
+    height: auto;
   }
 }
